tests/macros/int/choices.stderr
error: option `choices` does not exist for kind `int`
 --> $DIR/choices.rs:2:35
  |
2 |     inquisition::questions![Int { choices: todo!() }];
  |                                   ^^^^^^^
