tests/macros/int/choices.rs
fn main() {
    inquisition::questions![Int { choices: todo!() }];
}
